# NexisOS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  nexisos_readme.md  shell.nix
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  release.yml  test.yml
IsoDependencies/overlay/etc/skel/.config/autostart/: nexis-welcom.desktop
IsoDependencies/package/: Config.in
IsoDependencies/package/nexpm/: Config.in  nexpm.mk
IsoDependencies/package_manager/: Cargo.toml
IsoDependencies/package_manager/src/: cli.rs  config.rs  grub.rs  main.rs  manifest.rs  packages.rs  rollback.rs  store.rs  types.rs
IsoDependencies/package_manager/src/snapshots/: archive_util.rs  btrfs.rs  mod.rs  xfs.rs
IsoDependencies/scripts/: install.sh  post-install.sh
MakeDependacies/scripts/qemu/: run_aarch64.sh  run_riscv64.sh  run_x86_64.sh
depends/configs/: NexisOS_aarch64_defconfig  NexisOS_x86_64_defconfig
depends/kernel-configs/: linux-riscv64.config
depends/overlay/etc/: motd
distroConfigs/: NexisOS_defonfig
distroConfigs/buildroot-packages/nexis_init/: Config.in  nexis_init.mk
distroConfigs/buildroot-packages/nexis_pm/: Config.in  nexis_pm.mk
distroConfigs/buildroot-packages/nexis_scan/: Config.in  nexis_scan.mk
distroConfigs/kernel-configs/: linux-aarch64.config  linux-x86_64.config
distroConfigs/overlay/etc/nexisos/dotfiles/: hyprland.toml
distroConfigs/riscv64/: NexisOS_riscv64_defconfig
distroConfigs/x86_64/: NexisOS_x86_64_defconfig
