[package]
name = "package_manager"
version = "0.1.0-pre-alpha"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rayon = "1.8"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "z"
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
